--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,18 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 5.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 5 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Oct 13</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=xQb-N486mA4">Video of gyrosocopes spinning in zero-gravity space</a></p>
+													<p style="font-size: 100%"><a href="https://einstein.stanford.edu/content/education/GP-B_T-Guide4-2008-HQ.pdf">Article on Gravity Probe B: Investigating Einstein’s Spacetime with Gyroscopes</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=KZVgKu6v808">Video of MEMS accelerometers used in smartphones</a></p>
+													<a href="./pdfs/BabylonianSquareRootAlgo.pdf"><span font-size: 100%">Babylonian Square Root Algorithm</span></a>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 4.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 4 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Oct 6</span></td>
