--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,19 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 6.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 6 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Oct 20</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=YdOXS_9_P4U">Terence Tao discussing Aristarchus</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=nJdWUifhkbE">NASA's Reduced Gravity Education Flight Program</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=RJdDVOZrNfY">Vomit Comet used in NASA's Reduced Gravity Program</a></p>
+													<p style="font-size: 100%"><a href="https://www.nasa.gov/centers-and-facilities/armstrong/parabolic-flights-test-technologies-in-microgravity/">Microgravity tests done in parabolic flights</a></p>
+													<a href="./pdfs/VennDiagram.pdf"><span font-size: 100%">Venn Diagram Question</span></a>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 5.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 5 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Oct 13</span></td>
