--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,18 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 7.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 7 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Oct 27</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=DqjO4HGk9ro">Refractor vs. Reflector Telescopes</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=e-hPjkBooM4">How NASA Used Teamwork to Reach Saturn</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=dkVBXW4JeUI">NASA Celebrates MARS Rover Landing</a></p>
+													<a href="./pdfs/InfiniteSeries.pdf"><span font-size: 100%">Infinite Series Question</span></a>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 6.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 6 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Oct 20</span></td>
