--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,19 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 9.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 9 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Nov 10</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=921VbEMAwwY">SpaceX: Starship Mission to Mars</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=pm6df_SExVw">Video on what happens if your body is exposed to the vacuum of space</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=N5xft2fIqQU">Video demonstrating Boyle's Law in a vacuum chamber</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=H0KoqtdwuDY">Video on the evolution of the spacesuit</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=4zGIvrid3GQ">Video explaining the Artemis program</a></p>													
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 8.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 8 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Nov 3</span></td>
