--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,21 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 11.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 11 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Nov 24</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/Solar/lunecl.html">Illustrations of the Moon's orbital tilt impact on lunar eclipses and full moons</a></p>
+													<p style="font-size: 100%"><a href="https://airandspace.si.edu/collection-objects/lockheed-sr-71-blackbird/nasm_A19920072000">Smithsonian description of the SR-71 Blackbird</a></p>
+													<p style="font-size: 100%"><a href="https://www.nasa.gov/gallery/sr-71-blackbird/">NASA gallery of the SR-71 Blackbird</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=gkyVZxtsubM">Video on how the SR-71 Blackbird works</a></p>
+													<a href="./pdfs/TriangleInteriorAngles.pdf"><span font-size: 100%">Figure demonstrating that the interior angles of a triangle sum to 180&deg;</span></a></p>
+													<a href="./pdfs/PentagonInteriorAngles.pdf"><span font-size: 100%">Determine the sum of the interior angles of a pentagon</span></a></p>
+													<a href="./pdfs/StarCornerAngles.pdf"><span font-size: 100%">Bonus: Determine the sum of the corner angles of a 5-pointed star</span></a></p>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 10.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 10 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Nov 17</span></td>
