--- a/extracurricular.html
+++ b/extracurricular.html
@@ -49,7 +49,11 @@
 							<h1>Extra Curricular Activities</h1>
 							
 							<p style="font-size: 130%"><a href="https://www.umt.edu/montana-science-fair/"><b>2026 Montana Science Fair, March 20th 2026</b></a></p>
-							<br />
+							<ul style="list-style-type: square;">
+							<li><a href="./pdfs/CSEG Science Fair Orientation.pdf"><span style="font-size: 100%">CSEG Science Fair Orientation</span></a></li>
+							<li><a href="./pdfs/Science Fair Schedule.pdf"><span style="font-size: 100%">Science Fair Schedule</span></a></li>
+							<li><a href="./pdfs/Science Fair Project Proposal Form.pdf"><span style="font-size: 100%">Science Fair Project Proposal Form</span></a></li>
+							</ul>
 							<p style="font-size: 130%"><a href="https://hslda.org/post/which-standardized-test-and-setting-should-i-choose"><b>Year-End Standardized Testing, early June 2026</b></a></p>
 							<br />
 							<p style="font-size: 130%"><b>Family Field Trips</b></p>
