--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,18 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 12.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 12 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Dec 1</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.dvidshub.net/video/892454/united-states-german-and-japanese-military-forces-conduct-joint-amphibious-assault-during-talisman-sabre-23">Video of the Joint Amphibious Assault exercise via a Landing Craft, Air Cushion (LCAC) hovercraft</a></p>
+													<p style="font-size: 100%"><a href="https://eaglepubs.erau.edu/introductiontoaerospaceflightvehicles/chapter/hovercraft/">Embry-Riddle article on Ground Effect Vehicles (GEVs) which includes hovercrafts</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=vFCIkXoioxs">Hovercraft racing video</a></p>
+													<p style="font-size: 100%"><a href="https://www.sciencebuddies.org/science-fair-projects/project-ideas/list">List of Science Fair Project Ideas</a></p>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 11.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 11 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Nov 24</span></td>
