--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,17 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 13.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 13 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Dec 8</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=kc2sWE8_ejE">Video using Surface Analysis Charts for short-term weather prediction</a></p>
+													<p style="font-size: 100%"><a href="https://www.noaa.gov/sites/default/files/2022-11/surface_plot_key.pdf">Surface Analysis Weather Map Symbols</a></p>
+													<p style="font-size: 100%"><a href="https://www.noaa.gov/sites/default/files/2022-11/sfc_plot_map2.pdf">Sample NOAA Surface Analysis Map</a></p>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 12.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 12 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Dec 1</span></td>
