STEM Spring Pre-Class

--- a/schedule.html
+++ b/schedule.html
@@ -126,7 +126,7 @@
 												<td>2:00-2:50pm</td>
 											</tr>
 											<tr>
-												<td>Hybrid Mathematics</td>
+												<td>Hybrid Mathematics & Science Fair Project</td>
 												<td>Mathematics Group Activities (All Levels) & Individual Tutoring
 													<br><a href="./pdfs/Hybrid Mathematics.pdf"><span style="color:blue; font-size: 100%">Curriculum: Student Choice</span></a>
 												</td>
@@ -138,8 +138,11 @@
 							</section>
 							<br />
 							
+							<a href="assignments.STEM.Spring2026.html">
+								<p style="font-size: 120%"><b><u>STEM Spring 2026: Assignments & Notes</u></b></p>
+							</a>
 							<a href="assignments.STEM.Fall2025.html">
-								<p style="font-size: 120%"><b><u>STEM Fall 2025: Assignments & Notes</u></b></p>
+								<p style="font-size: 120%; color: LightGray"><b>STEM Fall 2025: Assignments & Notes</b></p>
 							</a>
 						</div>
 					</div>
