--- a/assignments.STEM.Spring2026.html
+++ b/assignments.STEM.Spring2026.html
@@ -60,6 +60,17 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Spring 2026_ Week 1.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 1 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Jan 12</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=5vRiLDRkN5c">Video explaining refraction</a></p>													
+												</td>
+											</tr>
+										</tbody>
+										<tbody>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Spring 2026_ Pre-Class.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Pre-Class Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Jan 5</span></td>
