--- a/assignments.STEM.Spring2026.html
+++ b/assignments.STEM.Spring2026.html
@@ -60,6 +60,19 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Spring 2026_ Week 2.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 2 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Jan 19</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://lowell.edu/discover/image-video-library/lmi-gallery/">Large Monolothic Image (LMI) Gallery</a></p>													
+													<p style="font-size: 100%"><a href="https://www.cosmiccaptures.com/deep-sky-photography">Cosmic Captures video on deep sky astrophotography</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=pzF23qGA4Pw">Video on the new type of infinity recently discovered</a></p>
+												</td>
+											</tr>
+										</tbody>
+										<tbody>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Spring 2026_ Week 1.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 1 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Jan 12</span></td>
