--- a/assignments.STEM.Spring2026.html
+++ b/assignments.STEM.Spring2026.html
@@ -60,6 +60,17 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Spring 2026_ Week 3.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 3 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Jan 26</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=oS1jitb5Y6M">Instructional video on Right Ascension and Declination</a></p>
+												</td>
+											</tr>
+										</tbody>
+										<tbody>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Spring 2026_ Week 2.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 2 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Jan 19</span></td>
