--- a/assignments.STEM.Spring2026.html
+++ b/assignments.STEM.Spring2026.html
@@ -60,6 +60,21 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Spring 2026_ Week 4.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 4 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Feb 2</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=j3Ps1YbTjmk">January 2026 Skywatching Tips from NASA</a></p>
+													<p style="font-size: 100%"><a href="https://fourmilab.ch/yoursky/">Fourmilab Your Sky</a></p>
+													<p style="font-size: 100%"><a href="http://news.sky-map.org/">Latest news on Sky-Map with recent astronomical discoveries</a></p>
+													<p style="font-size: 100%"><a href="http://www.midnightkite.com/index.aspx?URL=Software">List of astronomy software at Midnight Kite</a></p>
+													<p style="font-size: 100%"><a href="./pdfs/AlgorithmFlowChart.pdf">Algorithm flow chart for arranging three numbers in descending order</a></p>
+												</td>
+											</tr>
+										</tbody>
+										<tbody>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Spring 2026_ Week 3.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 3 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Jan 26</span></td>
