--- a/assignments.STEM.Spring2026.html
+++ b/assignments.STEM.Spring2026.html
@@ -60,6 +60,20 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Spring 2026_ Week 5.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 5 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Feb 9</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=IfEswszZTxE">Lockheed Martin video on Artemis II & Orion</a></p>
+													<p style="font-size: 100%"><a href="https://www.heavens-above.com/">Satellite prediction site</a></p>
+													<p style="font-size: 100%"><a href="https://spinoff.nasa.gov/spinoff/archives">Issue Archive of NASA Spinoffs</a></p>
+													<p style="font-size: 100%"><a href="./pdfs/Astronomy Activity Booklet.pdf">Astronomy Activity Booklet with Complex Star Field on pg. 31</a></p>
+												</td>
+											</tr>
+										</tbody>
+										<tbody>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Spring 2026_ Week 4.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 4 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Feb 2</span></td>
