--- a/assignments.STEM.Spring2026.html
+++ b/assignments.STEM.Spring2026.html
@@ -60,6 +60,22 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Spring 2026_ Week 6.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 6 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Feb 16</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://biblehub.com/study/proverbs/18-15.htm">Bible study on Proverbs 18:15</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=k2wtBWYjdRk">Seeing Beyond: The James Webb Space Telescope</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=LwkeoA-0SFA">The Webb Telescope's Optics</a></p>
+													<p style="font-size: 100%"><a href="./pdfs/SeeingTheDistantUniverseClearly.pdf">NASA SpaceMath Exercises</a></p>
+													<p style="font-size: 100%"><a href="https://esawebb.org/images/">ESA Webb Images</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=ogfoK6J_hGY">Geometric Pattern Using Protractor</a></p>
+												</td>
+											</tr>
+										</tbody>
+										<tbody>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Spring 2026_ Week 5.pdf"><span style="color:blue; font-size: 100%">STEM Spring 2026 Week 5 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Feb 9</span></td>
